Fixed spacing

--- a/src/components/PlayedCards/PlayedCards.module.css
+++ b/src/components/PlayedCards/PlayedCards.module.css
@@ -4,6 +4,9 @@
 }
 
 .myCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 1vh 0;
 }
 
