--- a/src/components/shared/CardList/CardList.module.css
+++ b/src/components/shared/CardList/CardList.module.css
@@ -32,7 +32,7 @@
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-between;
-    padding: 1vh;
+    padding: 1vh 0;
 }
 
 .spacer {
